--- a/project-start/index.html
+++ b/project-start/index.html
@@ -14,8 +14,19 @@
       <li class="push"><a href=" ">contacts </a></li>
     </ul>
   </nav>
-  <div class="zone red">Cover</div>
-  <div class="zone blue">Project Grid</div>
-  <div class="zone yellow">Footer</div>
+  <div class="container zone "><img class="cover" src="./img/undraw.png"></div>
+  <div class="zone blue grid-wrapper"> 
+   
+    <div class="box zone"><img src="C:\Users\ian65\project-start\project-start\img\data_storage_2_2.png"></div>
+    <div class="box zone"><img src="C:\Users\ian65\project-start\project-start\img\desktop_analytics_2.png"></div>
+    <div class="box zone"><img src="C:\Users\ian65\project-start\project-start\img\files_2.png"></div>
+    <div class="box zone"><img src="C:\Users\ian65\project-start\project-start\img\monitor_coding_2.png"></div>
+    <div class="box zone"><img src="C:\Users\ian65\project-start\project-start\img\monitor_settings_2.png"></div>
+    <div class="box zone"><img src="C:\Users\ian65\project-start\project-start\img\server_2_2.png"></div>
+    <div class="box zone"><img src="C:\Users\ian65\project-start\project-start\img\server_3.png"></div>
+    <div class="box zone"><img src="C:\Users\ian65\project-start\project-start\img\server_safe_2.png"></div>
+   
+  </div>
+  <footer class="zone yellow">zero => mastery</footer>
 </body>
 </html>
